<resources>
    <string name="app_name">BD_system</string>
    <string name="button_budget">BUDGET</string>
    <string name="button_deposit">DEPOSIT</string>
    <string name="button_date">Date</string>
    <string name="editText_selectDate">Please select your deadline</string>
    <string name="button_updateBudget">Update Budget</string>
    <string name="editText_budget">Please enter your budget</string>
    <string name="text_type">Please select your type</string>
    <string name="text_deadline">Please select your deadline</string>
    <string name="text_notify">Notify me!</string>
    <string name="text_budget">BUDGET</string>
    <string name="text_deposit">DEPOSIT</string>
    <string name="editText_deposit">Please enter your deposit</string>
</resources>
